tests/paczka1/small_fuzzy/94678255.err
Error in line 11: wFjAz1i A362 71,6
Error in line 13: wFjAz1i S245 76,3
Error in line 14: wFjAz1i S3 5,2
